# novel-downloader

./: Pipfile  README.md  main.py  mkdocs.yml  package.json  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
app/api/create-pdf/: route.ts
src/: __init__.py
